--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".begin"></activity>
-        <activity android:name=".begin1"></activity>
+        <activity android:name=".AboutCake"></activity>
+        <activity android:name=".Products"></activity>
     </application>
 
 </manifest>
